# QT-Front-Back-End

./: README.md
QT6_QGC/QT6_QGC/QGCDRONE/: CMakeLists.txt  ICentralLine.h  icons.qrc  joystickbuttons.cpp  joystickbuttons.h  main.cpp  navbar.cpp  navbar.h  navbar.qrc  streamingvideo.cpp  streamingvideo.h  widget.cpp  widget.h
QT6_QGC/QT6_QGC/build-QGCDRONE-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QT6_QGC/QT6_QGC/build-QGCDRONE-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
QT6_QGC/QT6_QGC/build-QGCDRONE-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
QT6_QGC/QT6_QGC/build-QGCDRONE-Desktop_Qt_6_4_2_GCC_64bit-Debug/QGCDRONE_autogen/: deps  mocs_compilation.cpp
QT6_QGC/QT6_QGC/build-buttons_design-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  buttons_design  cmake_install.cmake
QT6_QGC/QT6_QGC/build-buttons_design-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
QT6_QGC/QT6_QGC/build-buttons_design-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
QT6_QGC/QT6_QGC/build-buttons_design-Desktop_Qt_6_4_2_GCC_64bit-Debug/buttons_design_autogen/: deps
QT6_QGC/QT6_QGC/build-gstreamer_qgc-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QT6_QGC/QT6_QGC/build-gstreamer_qgc-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
QT6_QGC/QT6_QGC/build-gstreamer_qgc-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
QT6_QGC/QT6_QGC/build-gstreamer_qgc-Desktop_Qt_6_4_2_GCC_64bit-Debug/gstreamer_qgc_autogen/: deps  mocs_compilation.cpp
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_5_15_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_5_15_2_GCC_64bit-Debug/guiCustom_autogen/: deps  moc_predefs.h
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_6_2_4_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_6_2_4_GCC_64bit-Debug/guiCustom_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_6_4_2_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_guiCustom.rsp
QT6_QGC/QT6_QGC/build-guiCustom-Desktop_Qt_6_4_2_GCC_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
QT6_QGC/QT6_QGC/build-home-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  home
QT6_QGC/QT6_QGC/build-mediaplayer-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  mediaplayer
QT6_QGC/QT6_QGC/build-navbar-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  navbar
QT6_QGC/QT6_QGC/build-qmlMap-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qmlMap
QT6_QGC/QT6_QGC/build-qmlWebView-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qmlWebView
QT6_QGC/QT6_QGC/build-registration-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
QT6_QGC/QT6_QGC/build-test-Desktop_Qt_6_4_2_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QT6_QGC/QT6_QGC/build-test_stream-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  test_stream
QT6_QGC/QT6_QGC/build-test_stream_2-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  test_stream_2
QT6_QGC/QT6_QGC/buttons_design/: CMakeLists.txt  buttons.cpp  buttons.h  icon.qrc  main.cpp  style.qss
QT6_QGC/QT6_QGC/gstreamer_qgc/: CMakeLists.txt  gstreamer.cpp  gstreamer.h  gstreamer.ui  main.cpp
QT6_QGC/QT6_QGC/guiCustom/: CMakeLists.txt  camerastream.cpp  camerastream.h  compass.qrc  dronetypes.cpp  dronetypes.h  dronetypes.ui  general.qrc  huddisplay.cpp  huddisplay.h  huddisplay.ui  joystickcontrolmain.cpp  joystickcontrolmain.h  main.cpp  myprofregistration.cpp  myprofregistration.h  myprofregistration.ui  navbar.cpp  navbar.h  navbar.qrc  pippo.ui  readme.md  registration.cpp  registration.h  signinpage.cpp  signinpage.h  signinpage.ui  signuppage.cpp  signuppage.h  signuppage.ui  widget.cpp  widget.h  widget.ui
QT6_QGC/QT6_QGC/home/: CMakeLists.txt  home_bar.cpp  home_bar.h  main.cpp
QT6_QGC/QT6_QGC/mediaplayer/: CMakeLists.txt  main.cpp  stream.sdp  widget.h
QT6_QGC/QT6_QGC/navbar/: CMakeLists.txt  main.cpp  navbar.cpp  navbar.h  navbar.qrc
QT6_QGC/QT6_QGC/pyqt/: widget.py
QT6_QGC/QT6_QGC/qmlMap/: CMakeLists.txt  mainwindow.h  mainwindow.ui  map.qml
QT6_QGC/QT6_QGC/qmlWebView/: CMakeLists.txt  main.cpp  main.qml  webviewhandler.cpp  webviewhandler.h
QT6_QGC/QT6_QGC/registration/: CMakeLists.txt  form.ui  main.cpp  myprofregistration.cpp  myprofregistration.h  myprofregistration.ui  mytest.cpp  mytest.h  regis_images.qrc  registration.cpp  registration.h  signinpage.cpp  signinpage.h  signinpage.ui  signuppage.cpp  signuppage.h  signuppage.ui  welcom.cpp  welcom.h
QT6_QGC/QT6_QGC/test_2/: CMakeLists.txt
QT6_QGC/QT6_QGC/test_stream/: CMakeLists.txt  main.cpp  stream.cpp  stream.h
QT6_QGC/QT6_QGC/test_stream_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
(+1989 files in other folders)
